<resources>
    <string name="app_name">Present Sir</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="welcome">Welcome!</string>
    <string name="nothing">Nothing</string>
    <string name="back_arrow">Back Arrow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="name">Name</string>
    <string name="university_roll">University Roll</string>
    <string name="branch">Branch</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="date">Date</string>
    <string name="roll">Roll</string>
    <string name="submit">Submit</string>
    <string name="code">Code</string>
    <string name="subject">Subject</string>
    <string name="check_attendance">Check Attendance</string>
    <string name="give_attendance">Give Attendance</string>
    <string name="profile">profile</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="full_name">full name</string>
    <string name="university_roll_small">university roll</string>
    <string name="branch_small">branch</string>
    <string name="gender">gender</string>
    <string name="date_of_birth">date of birth</string>
    <string name="email_small">email</string>
    <string name="update">update</string>
    <string name="logout">logout</string>
    <string name="date_small">date</string>
    <string name="roll_small">roll</string>
    <string name="subject_small">subject</string>
    <string name="submit_small">submit</string>
    <string name="code_small">code</string>
    <string name="attendance_list">Attendance List</string>
    <string name="dot">.</string>
    <string name="dashboard">dashboard</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="see_attendance_list">see attendance list</string>
    <string name="set">set</string>
    <string name="login_small">login</string>
    <string name="password_small">password</string>
    <string name="register_small">register</string>
</resources>