<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_800"
    android:fillViewport="true"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_arrow_back"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/back_arrow"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />

        <ImageView
            android:id="@+id/iv_white_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/iv"
            android:backgroundTint="@color/purple_5"
            android:contentDescription="@string/nothing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/gl_horizontal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />


        <View
            android:id="@+id/iv_view"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:background="@drawable/view_style"
            app:layout_constraintBottom_toBottomOf="@id/gl_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/gl_horizontal" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/logo_teal"
            android:backgroundTint="@color/purple_800"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="@id/iv_view"
            app:layout_constraintEnd_toEndOf="@id/iv_view"
            app:layout_constraintStart_toStartOf="@id/iv_view"
            app:layout_constraintTop_toTopOf="@id/iv_view" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/et_style_login_register"
            android:drawableStart="@drawable/custom_email"
            android:drawablePadding="8dp"
            android:fontFamily="@font/nunito_light"
            android:hint="@string/email_small"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_view" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="password"
            android:background="@drawable/et_style_login_register"
            android:drawableStart="@drawable/custom_lock"
            android:drawablePadding="8dp"
            android:fontFamily="@font/nunito_light"
            android:hint="@string/password_small"
            android:inputType="textPassword"
            android:longClickable="false"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="48dp"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <ImageView
            android:id="@+id/iv_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/nothing"
            android:src="@drawable/ic_visibility_off"
            app:layout_constraintBottom_toBottomOf="@id/et_password"
            app:layout_constraintEnd_toEndOf="@id/et_password"
            app:layout_constraintTop_toTopOf="@id/et_password" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/nunito_light"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/et_password"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <Button
            android:id="@+id/btn_login"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="224dp"
            android:layout_height="48dp"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="96dp"
            android:background="@drawable/profile_card_style"
            android:fontFamily="@font/nunito_medium"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/login_small"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
            tools:ignore="UnusedAttribute"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/tv_still"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/nunito_light"
            android:text="@string/don_t_have_an_account"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintVertical_bias=".99" />

        <TextView
            android:id="@+id/tv_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="96dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/nunito_medium"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_still"
            app:layout_constraintVertical_bias=".99" />

        <ProgressBar
            android:id="@+id/pb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:indeterminateTint="@color/purple_800"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>