<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_10"
    tools:context=".StudentDashboardActivity">

    <TextView
        android:id="@+id/tv_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/dashboard"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_account"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_account"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/account_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_account"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/iv_give_attendance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_arrow_back"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/v_back"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/iv_give_attendance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_give_attendance"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/profile_card_style"
        android:contentDescription="@string/give_attendance"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dashboard"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_margin="16dp"
        android:background="@drawable/arrow"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/give_attendance"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@id/iv_give_attendance"
        app:layout_constraintEnd_toEndOf="@id/iv_give_attendance" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/give_attendance"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/iv_give_attendance"
        app:layout_constraintTop_toTopOf="@id/iv_give_attendance" />

    <ImageView
        android:id="@+id/iv_check_attendance"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/profile_card_style"
        android:contentDescription="@string/check_attendance"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_give_attendance"
        app:layout_constraintVertical_bias="0"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/check_attendance"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/iv_check_attendance"
        app:layout_constraintTop_toTopOf="@id/iv_check_attendance" />

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_margin="16dp"
        android:background="@drawable/arrow"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/check_attendance"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@id/iv_check_attendance"
        app:layout_constraintEnd_toEndOf="@id/iv_check_attendance" />




</androidx.constraintlayout.widget.ConstraintLayout>